--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,7 @@
 
         <TextView
             android:id="@+id/q1"
-            style="@style/AppTheme"
+            style="@style/questions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Q1. Emperor Augustus was desxribed as a average normal looking Roman man with not distinct feature except for one thing: What was it?"
@@ -65,6 +65,7 @@
 
         <TextView
             android:id="@+id/q2"
+            style="@style/questions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Q2. Which Roman General was the blood bother of Attila the Hun and was the first to beat him in battle?"
@@ -103,6 +104,7 @@
 
         <TextView
             android:id="@+id/q3"
+            style="@style/questions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Q3. Which of these men where apart of the First Triumvirate"
@@ -156,6 +158,7 @@
 
         <TextView
             android:id="@+id/q4"
+            style="@style/questions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Q4. There is a certain nickname given to the greatest military leaders. A name in which Napoleon himself wanted but failed to achieve. What is the nickname?"
@@ -173,6 +176,7 @@
 
         <TextView
             android:id="@+id/q5"
+            style="@style/questions"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Q5. There is a legend in Greece that dates back to the fall of Byzantium. The legend states that during their darkest times, when the descendants of Rome need him most, he will descend and restore the Roman EMpire. Who is he referred to as?"
@@ -211,14 +215,8 @@
         </RadioGroup>
 
         <TextView
+            style="@style/title"
             android:id="@+id/score"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="0"
-            android:layout_marginBottom="40dp"/>
-
-        <TextView
-            android:id="@+id/scoreTwo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="0"
@@ -229,7 +227,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Submit"
-            style="@style/AppTheme"
+            style="@style/button"
             android:onClick="finalScore"
             android:layout_marginBottom="40dp"/>
 
