--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,10 +2,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#009688</item>
+        <item name="colorPrimary">#673AB7</item>
         <item name="colorPrimaryDark">#303F9F</item>
         <item name="colorAccent">#FFC107</item>
-        <item name="fontFamily">San-Serif</item>
     </style>
 
     <style name="title">
@@ -13,6 +12,18 @@
         <item name="android:layout_margin">20dp</item>
         <item name="android:layout_centerHorizontal">true</item>
         <item name="android:layout_centerInParent">true</item>
+        <item name="android:textColor">#673AB7</item>
+    </style>
+
+    <style name="questions">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">#512DA8</item>
+        <item name="android:state_pressed">true</item>
+    </style>
+
+    <style name="button">
+        <item name="android:background">#673AB7</item>
+        <item name="android:textColor">#FFC107</item>
     </style>
 
 </resources>
